		on systems without mkstemp) (reported as Debian bug #574537).
20100322	const fixes, enabling builds using GCC's -Wcast-qual.
		Fixes to allow build using GCC's -Wshadow.
20100326	Running 'make test' will now treat memory leaks as test
		failure (in debug builds only). Also fixing a memory leak.
20100406	Bogus hack to machine_evbmips.cc to let RTEMS print some boot
		messages (again?) for mvme5500.
20100806	nbjoerg on #GXemul (FreeNode) noticed an easy way to trigger
		an unhandled case in memory_sh.cc; applying a potential fix.
20100830	Updating the OpenBSD/landisk guest operating system install
		instructions from 4.6 to 4.7.
		Improved the "pretty print" of components in the tree dump,
		by moving it out to a per-component virtual function.
20100901	Beginning on CacheComponent (a generic memory cache component).
20100910	The mechanism for detecting when to assert MIPS compare
		interrupts could sometimes stop delivering interrupts, if the
		count register was read. Fixed by keeping track of how many
		times the register is read and reverting it before doing the
		count/compare interrupt assert check. (Thanks to Jakub Jermar
		for noticing this bug using HelenOS.)
20100912	Updating the NetBSD/hpcmips guest operating system install
		instructions from 4.0.1 to 5.0.2, and the NetBSD/algor install
		instructions from 3.1 to 5.0.2.
20110212	Updating the NetBSD/pmax install instructions: 5.0.2 -> 5.1.
		Updating OpenBSD/landisk instructions: 4.7 -> 4.8.
20110606	Updating the documentation on how to start Dreamcast binaries,
		and updating from NetBSD/dreamcast 5.0.1 to 5.1.
20110609	Adding automagic guessing of Dreamcast ISO filesystem offset,
		so that Linux/dreamcast can be booted without specifying the
		offset.
		Booting Dreamcast via bootblock now uses software PROM starting
		point instead of calling a particular bootblock address, making
		it possible to run a complete boot sequence in more cases.
